@@ -742,6 +742,7 @@ view.status.quick-copy=Quick copy mode - marked text will replace selection
 view.status.recording=Macro recording
 view.status.rect-quick-copy=Rectangular quick copy mode - marked text will replace selection
 view.status.rect-select=Rectangular selection mode
+view.status.rect-select-changed=Rectangular selection is {0,choice,0#off|1#on}
 view.status.replace-all=Replaced {0} occurrence(s) in {1} file(s)
 view.status.search-not-found=Search string not found!
 view.status.select-marker=Enter shortcut of marker to select to
@@ -1600,6 +1601,7 @@ options.status.show-edit-mode=Show edit mode
 options.status.show-fold-mode=Show fold mode
 options.status.show-wrap=Show wrap mode
 options.status.show-multi-select=Show multiple selection status
+options.status.show-rect-select=Show rectangular selection status
 options.status.show-overwrite=Show overwrite status
 options.status.show-line-seperator=Show buffer line seperator
 options.status.show-memory=Show memory indicator
